correct rating prediction breakline

--- a/Rating.ipynb
+++ b/Rating.ipynb
@@ -199,13 +199,15 @@
     "            # update beta_user\n",
     "            temp_beta_user={}\n",
     "            for u in self.beta_user:\n",
-    "                temp = sum([self.userbook_rating[u+b] - (alpha+self.beta_book[b]) for b in self.booksPerUser[u]])\n",
+    "                temp = sum([self.userbook_rating[u+b] - (alpha+self.beta_book[b])\\\n",
+    "                            for b in self.booksPerUser[u]])\n",
     "                temp_beta_user[u] = temp/ (lamb + len(self.booksPerUser[u]))\n",
     "\n",
     "            # update beta_book\n",
     "            temp_beta_book={}\n",
     "            for b in self.beta_book:\n",
-    "                temp = sum([self.userbook_rating[u+b] - (alpha+self.beta_user[u]) for u in self.usersPerBook[b]])\n",
+    "                temp = sum([self.userbook_rating[u+b] - (alpha+self.beta_user[u])\\\n",
+    "                            for u in self.usersPerBook[b]])\n",
     "                temp_beta_book[b] = temp/ (lamb + len(self.usersPerBook[b]))\n",
     "\n",
     "            for u in self.beta_user:\n",
