--- a/Rating.ipynb
+++ b/Rating.ipynb
@@ -138,13 +138,15 @@
     "                # update beta_user\n",
     "                temp_beta_user={}\n",
     "                for u in beta_user:\n",
-    "                    temp = sum([self.userbook_rating[u+b] - (alpha+beta_book[b]) for b in self.booksPerUser[u]])\n",
+    "                    temp = sum([self.userbook_rating[u+b] - (alpha+beta_book[b])\\\n",
+    "                                for b in self.booksPerUser[u]])\n",
     "                    temp_beta_user[u] = temp/ (lamb + len(self.booksPerUser[u]))\n",
     "\n",
     "                # update beta_book\n",
     "                temp_beta_book={}\n",
     "                for b in beta_book:\n",
-    "                    temp = sum([self.userbook_rating[u+b] - (alpha+beta_user[u]) for u in self.usersPerBook[b]])\n",
+    "                    temp = sum([self.userbook_rating[u+b] - (alpha+beta_user[u])\\\n",
+    "                                for u in self.usersPerBook[b]])\n",
     "                    temp_beta_book[b] = temp/ (lamb + len(self.usersPerBook[b]))\n",
     "\n",
     "                for u in beta_user:\n",
